--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
-requests>="2.18"
+# selenium and urllib versions for MacOS compatibility
 selenium>=3.8.0,<4.0
+urllib3==1.26.16
+
+requests>="2.18"
 progressbar>="2.5"
 tomd>=0.1.3
+bs4
+lxml
+requests_download
